--- a/src/Row.css
+++ b/src/Row.css
@@ -2,8 +2,15 @@
   width: 100%;
   object-fit: contain;
   max-height: 100px;
+  transition: transform 450ms;
+  margin-right: 10px;
 }
 
 .row__posters {
   display: flex;
+}
+
+.row__poster:hover {
+  transform: scale(1.08);
+  opacity: 1;
 }
