--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 
 h1 {
   font-size: 36px;
-  color: #ffff;
+  color: #fa0505;
+  margin-left: 10px;
 }
 
 h2 {
   font-size: 36px;
   color: #ffff;
+  margin-left: 10px;
 }
