--- a/src/Banner.css
+++ b/src/Banner.css
@@ -16,4 +16,9 @@ button {
   font-weight: 800;
   font-size: 16px;
   margin-left: 10px;
+  margin-bottom: 20px;
+}
+
+button:hover {
+  color: red;
 }
